--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["lib", "app", "src/pages", "src/view-models"]
+  "exclude": ["lib", "app"]
 }
